--- a/src/css/legend.less
+++ b/src/css/legend.less
@@ -42,6 +42,7 @@ aside.legend {
       height: 12px;
       display: inline-block;
       vertical-align: text-top;
+      opacity: 0.8;
       @media @tablet {
         display: block;
         width: auto;
